@@ -797,3 +797,5 @@ Version 1.4-9
 Version 1.4-10
 
    o  Corrected problem in paste in Command window in non-Windows systems (reported by Liviu Andronic).
+   
+   o  Arranged to intercept more X11 warnings (reported by Liviu Andronic).
